fixed issue where the presentation got clipped by the root div

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,3 @@
-#root {
-  min-height: 100%;
-  overflow: hidden;
-  position: absolute;
-}
-
 body {
   position: absolute;
   margin: 0;
